main-menu (1.29) UNRELEASED; urgency=low

  * After the debconf priority was lowered because of an error, return to the
    default priority in one step when next a component runs successfully.

 -- Frans Pop <fjp@debian.org>  Sat, 27 Dec 2008 09:07:42 +0100

main-menu (1.28) unstable; urgency=low

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Bosnian (bs.po) by Armin Besirovic
  * Welsh (cy.po) by Jonathan Price
  * Danish (da.po)
  * Esperanto (eo.po) by Felipe Castro
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * French (fr.po) by Christian Perrier
  * Gujarati (gu.po) by Kartik Mistry
  * Croatian (hr.po) by Josip Rodin
  * Italian (it.po) by Milo Casagrande
  * Latvian (lv.po) by Peteris Krisjanis
  * Macedonian (mk.po) by Arangel Angov
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Russian (ru.po) by Yuri Kozlov
  * Serbian (sr.po) by Veselin Mijušković

 -- Otavio Salvador <otavio@debian.org>  Sun, 21 Sep 2008 19:16:22 -0300

main-menu (1.27) unstable; urgency=low

  [ Frans Pop ]
  * Remove Christian Perrier, Martin Sjogren and Matt Kraai as Uploaders with
    many thanks for their past contributions.

  [ Updated translations ]
  * Basque (eu.po) by Piarres Beobide
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Marathi (mr.po) by Sampada
  * Panjabi (pa.po) by Amanpreet Singh Alam
  
 -- Otavio Salvador <otavio@debian.org>  Thu, 08 May 2008 14:07:52 -0300

main-menu (1.26) unstable; urgency=low

  * Automatically mark components with a menu item number of 99999 or 99900
    as uninstallable (99900 is deprecated). This can be used for components
    that should be selectable by users in anna, but don't have functionality
    that can be run from the main menu. Examples are openssh-client and fdisk.

  [ Updated translations ]
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Frans Pop <fjp@debian.org>  Wed, 26 Mar 2008 14:07:35 +0100

main-menu (1.25) unstable; urgency=low
